--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+# Swagger Configuration
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/v3/api-docs
