--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.profiles.active=dev
+
 
 # Swagger Configuration
 springdoc.api-docs.enabled=true
