--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation 'ch.qos.logback:logback-classic:1.4.5'
-
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 
 	compileOnly 'org.projectlombok:lombok'
